<resources>
    <string name="app_name">Melijo Online</string>
    <string name="belum_punya_akun">Belum punya akun? Daftar di sini</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun? Login disini</string>
    <string name="beranda">Beranda</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accont_fragment">Accont Fragment</string>
    <string name="trolley_fragment">Trolley Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="slider_image">Slider Image</string>
    <string name="yuk_belanja">Nikmati kemudahan belanja sayur dalam genggaman. Order Kuy!</string>
    <string name="kategori">Kategori</string>
    <string name="sayur">Sayur</string>
    <string name="rempah">Rempah</string>
    <string name="paket_sayur">Paket Sayur</string>
    <string name="lain_lain">Lain-lain</string>
    <string name="daging_amp_ayam"><![CDATA[Daging & Ayam]]></string>
    <string name="seafood">Seafood</string>
    <string name="akun_anda">Akun Anda</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="lokasi">Lokasi</string>
    <string name="saldo_anda">Saldo Anda</string>
    <string name="tambah">Tambah</string>
    <string name="rp_0">Rp 0</string>
    <string name="riwayat">Riwayat</string>
    <string name="splach_image">splach image</string>
    <string name="keluar">Keluar</string>
    <string name="vegetable_name">Vegetable Name</string>
    <string name="default_price">Rp 0,00</string>
    <string name="vegetable_image">Vegetable Image</string>
    <string name="detail_vegetable_image">Detail Vegetable Image</string>
    <string name="vegetable_description">This is description of vegetable</string>
    <string name="masukkan_keranjang">Masukkan Keranjang</string>
    <string name="berapa_banyak">Berapa Banyak?</string>
    <string name="pluss">+</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="total">Total:</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="setting">setting</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="selesai_belanja">Selesai Belanja</string>
    <string name="biaya_pengiriman">Estimasi Biaya Pengiriman</string>
    <string name="vegetable_qty">vegetable_qty</string>
    <string name="tidak_ada_item_yang_dipesan_saat_ini">Tidak ada item yang dipesan saat ini</string>
    <string name="buah_buahan">Buah-buahan</string>
    <string name="waktu">Waktu:</string>
    <string name="default_time">00 : 00 : 00</string>
    <string name="detail">Detail</string>
    <string name="right">right</string>
    <string name="transaksi">Transaksi</string>
    <string name="item">Item:</string>
    <string name="nama_item">Nama Item</string>
    <string name="tidak_ada_transaksi">Tidak Ada Transaksi</string>
    <string name="hapus">Hapus</string>
    <string name="default_discount">50%</string>
    <string name="alamat_email_anda">Alamat email Anda</string>
    <string name="send">Kirim</string>
    <string-array name="transaction_progress">
        <item>Sedang Diproses</item>
        <item>Riwayat</item>
    </string-array>
</resources>
