<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailSeasoningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_detail_seasoning"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/detail_vegetable_image"/>

        <TextView
            android:id="@+id/tv_seasoning_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/vegetable_name"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv_seasoning_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/vegetable_description"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv_seasoning_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:text="@string/default_price"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="2"
                android:text="@string/berapa_banyak"/>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/minus"/>

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/pluss"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/tv_total_pay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/rp_0"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_to_bucket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="17sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:text="@string/masukkan_keranjang"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>