<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profil"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profileImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/person_icon"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_selectImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/setting"
                    android:src="@drawable/ic_settings_grey_24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_akun"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:inputType="text"
                android:background="@color/colorWhite"
                android:hint="@string/nama_akun"
                android:autofillHints="@string/nama_akun"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/et_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorWhite"
                android:autofillHints="@string/nama_lengkap"
                android:hint="@string/nama_lengkap"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tv_emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorWhite"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telepon"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorWhite"
                android:digits="0123456789"
                android:hint="@string/nomor_telepon"
                android:autofillHints="@string/nomor_telepon"
                android:inputType="phone"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:inputType="text"
                android:autofillHints="@string/alamat"
                android:background="@color/colorWhite"
                android:hint="@string/alamat"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/simpan"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/batal"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>