<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:contentDescription="@string/vegetable_image"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/melijo_logo"
                tools:layout_editor_absoluteX="189dp" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetable_name"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/tv_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="@string/default_price"
                android:fontFamily="@font/roboto_regular"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>